--- a/docs/guides/instances.mdx
+++ b/docs/guides/instances.mdx
@@ -1,5 +1,5 @@
 ---
-title: Instances
+title: Create and manage instances
 description: What IBM Quantum Platform instances are and how to use them
 ---
 
