--- a/docs/tutorials/reduce-transpiled-circuit-depth-with-circuit-cutting.ipynb
+++ b/docs/tutorials/reduce-transpiled-circuit-depth-with-circuit-cutting.ipynb
@@ -451,6 +451,9 @@
   }
  ],
  "metadata": {
+   "title": "Reduce transpiled circuit depth with circuit cutting",
+ "description": "Build a Qiskit Pattern for cutting gates in a quantum circuit to reduce circuit depth.",
+ "platform": "cloud",
   "kernelspec": {
    "display_name": "Python 3",
    "language": "python",
