--- a/docs/tutorials/variational-quantum-eigensolver.ipynb
+++ b/docs/tutorials/variational-quantum-eigensolver.ipynb
@@ -712,6 +712,9 @@
   }
  ],
  "metadata": {
+   "title": "Variational quantum eigensolver",
+ "description": "Variational quantum algorithms are hybrid-algorithms for observing the utility of quantum computation on noisy, near-term IBM Quantum systems.",
+ "platform": "cloud",
   "kernelspec": {
    "display_name": "Python 3",
    "language": "python",
