--- a/docs/tutorials/solving-maxcut-with-reduced-qubit-requirements-using-pauli-correlation-encoding.ipynb
+++ b/docs/tutorials/solving-maxcut-with-reduced-qubit-requirements-using-pauli-correlation-encoding.ipynb
@@ -662,6 +662,9 @@
   }
  ],
  "metadata": {
+   "title": "Solving Maxcut with Reduced Qubit Requirements Using Pauli Correlation Encoding",
+ "description": "Use Pauli Correlation Encoding to encode optimization problems into qubits with greater efficiency for quantum computation.",
+ "platform": "cloud",
   "kernelspec": {
    "display_name": "Python 3",
    "language": "python",
