--- a/docs/guides/considerations-set-up-runtime.mdx
+++ b/docs/guides/considerations-set-up-runtime.mdx
@@ -3,7 +3,7 @@ title: Considerations for setting up IBM Quantum Platform for an organization
 description: Considerations for setting up IBM Quantum Platform in an organization
 platform: cloud
 ---
-
+{/* cspell:ignore chemlab */}
 
 # Considerations for setting up IBM Quantum Platform for an organization
 <Admonition type="note">
