--- a/docs/tutorials/variational-quantum-eigensolver.ipynb
+++ b/docs/tutorials/variational-quantum-eigensolver.ipynb
@@ -7,8 +7,7 @@
    "metadata": {},
    "source": [
     "# Variational quantum eigensolver\n",
-    "*Usage estimate: 73 minutes on IBM Kyiv (NOTE: This is an estimate only. Your runtime may vary.)*\n",
-    "\n"
+    "*Usage estimate: 73 minutes on IBM Kyiv (NOTE: This is an estimate only. Your runtime may vary.)*"
    ]
   },
   {
@@ -40,7 +39,7 @@
     "Before starting this tutorial, ensure that you have the following installed:\n",
     "\n",
     "- Qiskit SDK 1.0 or later, with visualization support (`pip install 'qiskit[visualization]'`)\n",
-    "- Qiskit Runtime 0.22 or later(`pip install qiskit-ibm-runtime`) \n"
+    "- Qiskit Runtime 0.22 or later(`pip install qiskit-ibm-runtime`)"
    ]
   },
   {
@@ -93,7 +92,9 @@
    "source": [
     "# To run on hardware, select the backend with the fewest number of jobs in the queue\n",
     "service = QiskitRuntimeService(channel=\"ibm_quantum\")\n",
-    "backend = service.least_busy(operational=True, simulator=False, min_num_qubits = 127)"
+    "backend = service.least_busy(\n",
+    "    operational=True, simulator=False, min_num_qubits=127\n",
+    ")"
    ]
   },
   {
@@ -306,7 +307,9 @@
     "    cost_history_dict[\"iters\"] += 1\n",
     "    cost_history_dict[\"prev_vector\"] = params\n",
     "    cost_history_dict[\"cost_history\"].append(energy)\n",
-    "    print(f\"Iters. done: {cost_history_dict['iters']} [Current cost: {energy}]\")\n",
+    "    print(\n",
+    "        f\"Iters. done: {cost_history_dict['iters']} [Current cost: {energy}]\"\n",
+    "    )\n",
     "\n",
     "    return energy"
    ]
@@ -712,9 +715,7 @@
   }
  ],
  "metadata": {
-   "title": "Variational quantum eigensolver",
- "description": "Variational quantum algorithms are hybrid-algorithms for observing the utility of quantum computation on noisy, near-term IBM Quantum systems.",
- "platform": "cloud",
+  "description": "Variational quantum algorithms are hybrid-algorithms for observing the utility of quantum computation on noisy, near-term IBM Quantum systems.",
   "kernelspec": {
    "display_name": "Python 3",
    "language": "python",
@@ -731,7 +732,9 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3"
-  }
+  },
+  "platform": "cloud",
+  "title": "Variational quantum eigensolver"
  },
  "nbformat": 4,
  "nbformat_minor": 5
