--- a/docs/tutorials/quantum-kernel-training.ipynb
+++ b/docs/tutorials/quantum-kernel-training.ipynb
@@ -81,17 +81,22 @@
     "\n",
     "from qiskit_serverless import IBMServerlessProvider, QiskitPattern\n",
     "\n",
+    "\n",
     "def visualize_counts(res_counts, num_qubits, num_shots):\n",
     "    \"\"\"Visualize the outputs from the Qiskit Sampler primitive.\"\"\"\n",
     "    zero_prob = res_counts.get(0, 0.0)\n",
-    "    top_10 = dict(sorted(res_counts.items(), key=lambda item: item[1], reverse=True)[:10])\n",
+    "    top_10 = dict(\n",
+    "        sorted(res_counts.items(), key=lambda item: item[1], reverse=True)[\n",
+    "            :10\n",
+    "        ]\n",
+    "    )\n",
     "    top_10.update({0: zero_prob})\n",
     "    by_key = dict(sorted(top_10.items(), key=lambda item: item[0]))\n",
     "    xvals, yvals = list(zip(*by_key.items()))\n",
     "    xvals = [bin(xval)[2:].zfill(num_qubits) for xval in xvals]\n",
-    "    yvals_prob=[]\n",
+    "    yvals_prob = []\n",
     "    for t in range(len(yvals)):\n",
-    "        yvals_prob.append(yvals[t]/num_shots)\n",
+    "        yvals_prob.append(yvals[t] / num_shots)\n",
     "    yvals = yvals_prob\n",
     "    plt.bar(xvals, yvals)\n",
     "    plt.xticks(rotation=75)\n",
@@ -256,15 +261,15 @@
     "num_shots = 10_000\n",
     "\n",
     "## Evaluate the problem using statevector-based primitives from Qiskit\n",
-    "#from qiskit.primitives import StatevectorSampler\n",
+    "# from qiskit.primitives import StatevectorSampler\n",
     "\n",
-    "#sampler = StatevectorSampler()\n",
-    "#results = sampler.run([overlap_circ]).result()\n",
-    "#counts = results[0].data.meas.get_int_counts()\n",
+    "# sampler = StatevectorSampler()\n",
+    "# results = sampler.run([overlap_circ]).result()\n",
+    "# counts = results[0].data.meas.get_int_counts()\n",
     "\n",
     "# Evaluate the problem using a QPU via Qiskit IBM Runtime\n",
     "\n",
-    "sampler = Sampler(mode = backend)\n",
+    "sampler = Sampler(mode=backend)\n",
     "results = sampler.run([overlap_ibm]).result()\n",
     "counts = results[0].data.meas.get_int_counts()\n",
     "\n",
@@ -300,7 +305,7 @@
    ],
    "source": [
     "# Calculate the fidelity, or the probability to measure 0\n",
-    "kernel_matrix[x1, x2] = counts.get(0, 0.0)/num_shots\n",
+    "kernel_matrix[x1, x2] = counts.get(0, 0.0) / num_shots\n",
     "print(f\"Fidelity: {kernel_matrix[x1, x2]}\")"
    ]
   },
@@ -366,10 +371,7 @@
    "source": [
     "job = serverless.run(\n",
     "    \"ibm/generate-kernel-entry\",\n",
-    "    arguments={\n",
-    "        \"sample1\": list(X_train[x1]), \n",
-    "        \"sample2\": list(X_train[x2])\n",
-    "    },\n",
+    "    arguments={\"sample1\": list(X_train[x1]), \"sample2\": list(X_train[x2])},\n",
     ")\n",
     "\n",
     "kernel_matrix[x1, x2] = job.result()[\"fidelity\"]\n",
@@ -402,11 +404,9 @@
   }
  ],
  "metadata": {
-   "title": "Quantum kernel training",
- "description": "Build a Qiskit Pattern for evaluating entries into a quantum kernel matrix used for binary classification.",
- "platform": "cloud",
+  "description": "Build a Qiskit Pattern for evaluating entries into a quantum kernel matrix used for binary classification.",
   "kernelspec": {
-   "display_name": "py3point12",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -420,8 +420,10 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.2"
-  }
+   "version": "3"
+  },
+  "platform": "cloud",
+  "title": "Quantum kernel training"
  },
  "nbformat": 4,
  "nbformat_minor": 5
