Reorganize Accounts and plans section (#2942)
closes #2915

--- a/docs/guides/instances.mdx
+++ b/docs/guides/instances.mdx
@@ -1,9 +1,9 @@
 ---
-title: Instances
+title: Create and manage instances
 description: What IBM Quantum Platform instances are and how to use them
 ---
 
-# Instances
+# Create and manage instances
 
 <LegacyContent>
 <Admonition type="note">
