--- a/docs/tutorials/utility-scale-error-mitigation-with-probabilistic-error-amplification.ipynb
+++ b/docs/tutorials/utility-scale-error-mitigation-with-probabilistic-error-amplification.ipynb
@@ -1447,7 +1447,7 @@
   }
  ],
  "metadata": {
-  "description": "Run a utility-scale error mitigation experiment with Qiskit Runtime using an experimental version of zero noise extrapolation with probabilistic error amplification.",
+  "description": "Run a utility-scale error mitigation experiment with zero noise extrapolation and probabilistic error amplification.",
   "kernelspec": {
    "display_name": "Python 3",
    "language": "python",
