--- a/docs/tutorials/utility-scale-error-mitigation-with-probabilistic-error-amplification.ipynb
+++ b/docs/tutorials/utility-scale-error-mitigation-with-probabilistic-error-amplification.ipynb
@@ -7,6 +7,8 @@
     "tags": []
    },
    "source": [
+    "{/* cspell:ignore mapsto multigraph inds extrap sharex sharey pidx */}\n",
+    "\n",
     "# Utility-scale error mitigation with probabilistic error amplification\n",
     "*Usage estimate: 60 minutes on IBM Kyiv (NOTE: This is an estimate only. Your runtime may vary.)*"
    ]
@@ -324,7 +326,7 @@
     ") -> QuantumCircuit:\n",
     "    \"\"\"Generating a entangling layer for the specified couplings.\n",
     "\n",
-    "    This corresonds to a Trotter layer for a ZZ Ising term with angle Pi/2.\n",
+    "    This corresponds to a Trotter layer for a ZZ Ising term with angle Pi/2.\n",
     "\n",
     "    Args:\n",
     "        gate_2q: The 2-qubit basis gate for the layer, should be \"cx\", \"cz\", or \"ecr\".\n",
@@ -448,7 +450,7 @@
     "                break\n",
     "\n",
     "    # If no qubits, get the largest qubit from all layers and\n",
-    "    # sepecify the range so the same one is used for all layers.\n",
+    "    # specify the range so the same one is used for all layers.\n",
     "    if qubits is None:\n",
     "        qubits = range(1 + max(coupling_qubits(layer_couplings)))\n",
     "\n",
@@ -629,7 +631,7 @@
     "num_params = 12\n",
     "\n",
     "# 12 parameter values for Rx between [0, pi/2].\n",
-    "# Reshape to outer product broadcast with obesrvables\n",
+    "# Reshape to outer product broadcast with observables\n",
     "parameter_values = np.linspace(0, np.pi / 2, num_params).reshape(\n",
     "    (num_params, 1)\n",
     ")\n",
@@ -936,7 +938,7 @@
    "id": "5c454847-f488-4459-aac7-9f6014f508c7",
    "metadata": {},
    "source": [
-    "The `PrimtiveResult` object contains a list-like structure named `PubResult`. As we submit only one PUB to the estimator, the `PrimitiveResult` contains a single `PubResult` object.\n",
+    "The `PrimitiveResult` object contains a list-like structure named `PubResult`. As we submit only one PUB to the estimator, the `PrimitiveResult` contains a single `PubResult` object.\n",
     "\n",
     "The PUB (primitive unified bloc) result expectation values and standard errors are array-valued. For estimator jobs with ZNE, there are several data fields of expectation values and standard errors available in the `PubResult`'s `DataBin` container. We will breifly discuss the data fields for expectation values here (similar data fields are available for standard errors (`stds`) as well).\n",
     "\n",
@@ -1109,7 +1111,7 @@
    "source": [
     "### Plot Trotter simulation results\n",
     "\n",
-    "The following code creates a plot to compare the raw and mitigated experiment results against the extact solution."
+    "The following code creates a plot to compare the raw and mitigated experiment results against the exact solution."
    ]
   },
   {
