--- a/docs/tutorials/variational-quantum-eigensolver.ipynb
+++ b/docs/tutorials/variational-quantum-eigensolver.ipynb
@@ -6,6 +6,8 @@
    "id": "a6f69b77",
    "metadata": {},
    "source": [
+    "{/* cspell:ignore nfev */}\n",
+    "\n",
     "# Variational quantum eigensolver\n",
     "*Usage estimate: 73 minutes on IBM Kyiv (NOTE: This is an estimate only. Your runtime may vary.)*"
    ]
