--- a/docs/tutorials/wire-cutting-to-improve-performance.ipynb
+++ b/docs/tutorials/wire-cutting-to-improve-performance.ipynb
@@ -334,7 +334,7 @@
    "id": "28c2d715-adb9-4218-aed5-96ebb1520756",
    "metadata": {},
    "source": [
-    "However, note that the number of qubits in the circuit has increased after inserting the virtual 2-qubit `Move` operations after cutting. Therefore, we need to expand the observables as well by inserting identitites to assert to the current circuit."
+    "However, note that the number of qubits in the circuit has increased after inserting the virtual 2-qubit `Move` operations after cutting. Therefore, we need to expand the observables as well by inserting identities to assert to the current circuit."
    ]
   },
   {
@@ -590,7 +590,7 @@
    "source": [
     "#### Transpile each subexperiment\n",
     "\n",
-    "Currently we need to traspile our circuits before submitting them for execution. Therefore, we shall transpile each circuit in the subexperiments first."
+    "Currently we need to transpile our circuits before submitting them for execution. Therefore, we shall transpile each circuit in the subexperiments first."
    ]
   },
   {
@@ -952,7 +952,7 @@
    "id": "71529591-2385-4dba-ac7f-bc3e56ca74dc",
    "metadata": {},
    "source": [
-    "We also create a `SparsePauliOp` object for the oboservable with proper co-efficients."
+    "We also create a `SparsePauliOp` object for the observable with proper co-efficients."
    ]
   },
   {
