--- a/docs/tutorials/reduce-transpiled-circuit-depth-with-circuit-cutting.ipynb
+++ b/docs/tutorials/reduce-transpiled-circuit-depth-with-circuit-cutting.ipynb
@@ -327,7 +327,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Transpile the subeperiments to the backend's instruction set architecture (ISA)\n",
+    "# Transpile the subexperiments to the backend's instruction set architecture (ISA)\n",
     "isa_subexperiments = pm.run(subexperiments)\n",
     "\n",
     "# Set up the Qiskit Runtime Sampler primitive.  For a fake backend, this will use a local simulator.\n",
