--- a/docs/tutorials/reduce-transpiled-circuit-depth-with-circuit-cutting.ipynb
+++ b/docs/tutorials/reduce-transpiled-circuit-depth-with-circuit-cutting.ipynb
@@ -72,7 +72,7 @@
     "We will implement our Qiskit Pattern using the four steps outlined in the [docs](https://docs.quantum.ibm.com/guides/intro-to-patterns). In this case, we will simulate expectation values on a circuit of a certain depth by cutting gates resulting in swap gates and executing subexperiments on shallower circuits. Gate cutting is relevant for Steps 2 (optimize circuit for quantum execution by decomposing distant gates) and 4 (post-processing to reconstruct expectation values on original circuit).\n",
     "In the first step, we'll generate a circuit from the Qiskit circuit library and define some observables.\n",
     "\n",
-    "*   Input: Classical parameters to define a circuit<br>\n",
+    "*   Input: Classical parameters to define a circuit\n",
     "*   Output: Abstract circuit and observables"
    ]
   },
@@ -375,7 +375,7 @@
     "\n",
     "Use the subexperiment results, subobservables, and sampling coefficients to reconstruct the expectation value of the original circuit.\n",
     "\n",
-    "Input: Quasi-probability distributions<br>\n",
+    "Input: Quasi-probability distributions\n",
     "Output: Reconstructed expectation values"
    ]
   },
