--- a/docs/migration-guides/classic-iqp-to-cloud-iqp.mdx
+++ b/docs/migration-guides/classic-iqp-to-cloud-iqp.mdx
@@ -1,19 +1,21 @@
 ---
-title: Migrate to the new IBM Quantum Platform (early access)
-description: Migrate to using the new IBM Quantum Platform (early access) for Open users
+title: Migrate to the upgraded IBM Quantum Platform
+description: Migrate to using the upgraded IBM Quantum Platform for Open users
 ---
 
-# Migrate to the new IBM Quantum Platform (early access)
+# Migrate to the upgraded IBM Quantum Platform
 
-Open and Pay-as-you-go Standard Plan users are encouraged to start exploring the early access version of the platform today, as IBM Quantum Platform Classic will be sunset on 1 July, 2025.
+This guide describes how, why, and when to transition to the [new version of IBM Quantum Platform,](https://quantum.cloud.ibm.com/) which is now available in early access mode.
 
-Premium Plan, Dedicated Service, and Startup Program users should wait to receive guidance from their administrators in the coming weeks.
+Early access mode means that while you are able to log in, create instances, run jobs, and so on, some functions are not yet available and will be added in the coming months. Find the recent changes in the new platform on the [Latest updates page,](/guides/latest-updates), which is updated every two weeks.
 
-This guide is for users who do not have Premium access and want to start using the upgraded version of IBM Quantum&reg; Platform (which runs on IBM Cloud&reg;).
+You can also continue to use [IBM Quantum Platform Classic](https://quantum.ibm.com/) until it is sunset on 1 July, 2025.
 
-<Admonition type="caution" title="Important">
-The [upgraded version of IBM Quantum Platform](https://quantum.cloud.ibm.com/) is in **early access** mode.  Therefore, you can log on, create instances, run jobs, and so on, but some functions are not available yet.  If you need to use functions that are not yet available, use [IBM Quantum Platform Classic](https://quantum.ibm.com/) or [Qiskit Runtime on IBM Cloud](https://cloud.ibm.com/quantum) instead.
-</Admonition>
+## When should I make the transition?
+
+Open and Pay-as-you-go Standard Plan users are encouraged to create an account and start using the new platform as soon as possible.
+
+Premium Plan, Dedicated Service, and Startup Program users should not create a new account yet and should wait to receive migration guidance from their administrators in the coming weeks.
 
 ## Benefits
 
@@ -53,7 +55,7 @@ Instead of accessing [IBM Quantum Platform Classic](https://quantum.ibm.com/), y
 ### Save results from IBM Quantum Platform Classic
 
 <Admonition type="important">
-Jobs that were run on IBM Quantum Platform Classic are not available on the upgraded version of IBM Quantum Platform, and will not be available after 1 July, 2025.  Therefore it is important that you save any data that you want to keep prior to that date. See the [Save and retrieve jobs](/guides/save-jobs) guide for instructions.
+Jobs that were run on IBM Quantum Platform Classic will not be available after that version of platform is sunset on 1 July, 2025. Open users should therefore save any workloads data from the classic platform prior to that date by following the steps in the [Save and retrieve jobs](/guides/save-jobs) guide.
 </Admonition>
 
 <span id="onboard"></span>
