--- a/docs/guides/latest-updates.mdx
+++ b/docs/guides/latest-updates.mdx
@@ -32,13 +32,14 @@ This section summarizes the recent enhancements and new features for IBM Quantum
 **10 April 2025**
 
 - Updated navigation to remove duplicated pages:
-  - The Administration section has been renamed "Access management" and focuses on managing users and access groups.
-  - There is only one page each for managing instances and workloads; there is no longer a separate page for administrators.  Instead, what you can view and manage on each page is dependent on your access and permissions.
+  - The Administration section has been renamed "Access management" and now only focuses on managing users and access groups.
+  - There is only one page each for managing instances and workloads; there are no longer separate pages for each in the Administration section.  Instead, what you can view and manage on each page is dependent on your access and permissions.
   - The analytics page (visible only to those with certain accesss) has been moved into the main navigation menu, to make it easier to find.
-- Launched two new QPUs: ibm_aachen (eu-de) and ibm_kingston (us-east)
+- Launched two new QPUs: ibm_aachen (eu-de region) and ibm_kingston (us-east region)
 - Individuals who can view the analytics page can now filter the data to view information per plan.
-- Administrators can easily add multiple account members to an access group.
+- Administrators can now more easily add multiple individuals to an access group due to the addition of an existing account members table.
 - Premium plan instance administrators can set the instance allocation as a usage limit, so that usage in those instances cannot exceed the time alloted. See the [Set instance allocation limits](/guides/allocation-limits) guide for instructions.
+- Note that the sunset date for IBM Quantum Platform Classic has been set for 1 July, 2025. For more information, read the [migration guide.](/migration-guides/classic-iqp-to-cloud-iqp)
 
 **27 March 2025**
 
