--- a/docs/migration-guides/classic-iqp-to-cloud-iqp.mdx
+++ b/docs/migration-guides/classic-iqp-to-cloud-iqp.mdx
@@ -7,7 +7,7 @@ description: Migrate to using the upgraded IBM Quantum Platform for Open users
 
 This guide describes how, why, and when to transition to the [new version of IBM Quantum Platform,](https://quantum.cloud.ibm.com/) which is now available in early access mode.
 
-Early access mode means that while you are able to log in, create instances, run jobs, and so on, some functions are not yet available and will be added in the coming months. Find the recent changes in the new platform on the [Latest updates page,](/guides/latest-updates), which is updated every two weeks.
+Early access mode means that while you are able to log in, create instances, run jobs, and so on, some functions are not yet available and will be added in the coming months. Find the recent changes in the new platform on the [Latest updates page,](/guides/latest-updates) which is updated every two weeks.
 
 You can also continue to use [IBM Quantum Platform Classic](https://quantum.ibm.com/) until it is sunset on 1 July, 2025.
 
