--- a/docs/migration-guides/classic-iqp-to-cloud-iqp.mdx
+++ b/docs/migration-guides/classic-iqp-to-cloud-iqp.mdx
@@ -55,7 +55,7 @@ Instead of accessing [IBM Quantum Platform Classic](https://quantum.ibm.com/), y
 ### Save results from IBM Quantum Platform Classic
 
 <Admonition type="important">
-Jobs that were run on IBM Quantum Platform Classic will not be available after that version of platform is sunset on 1 July, 2025.
+Jobs that were run on IBM Quantum Platform Classic will not be available after that version of the platform is sunset on 1 July, 2025.
 </Admonition>
 
 * Open users should save any workloads data from the classic platform prior to that date by following the steps in the [Save and retrieve jobs](/guides/save-jobs) guide.
