update new guides & tutorials

--- a/docs/migration-guides/classic-iqp-to-cloud-iqp.mdx
+++ b/docs/migration-guides/classic-iqp-to-cloud-iqp.mdx
@@ -7,7 +7,7 @@ description: Migrate to using the upgraded IBM Quantum Platform for Open users
 
 This guide describes how, why, and when to transition to the [new version of IBM Quantum Platform,](https://quantum.cloud.ibm.com/) which is now available in early access mode.
 
-Early access mode means that while you are able to log in, create instances, run jobs, and so on, some functions are not yet available and will be added in the coming months. Find the recent changes to the new platform on the [Latest updates page,](/guides/latest-updates) which is updated every two weeks.
+Early access mode means that while you are able to log in, create instances, run jobs, and so on, some functions are not yet available and will be added in the coming months. Find the recent changes to the new platform on the [Latest updates page,](/docs/guides/latest-updates) which is updated every two weeks.
 
 You can continue to use [IBM Quantum Platform Classic](https://quantum.ibm.com/) until it is sunset on 1 July, 2025.
 
@@ -58,7 +58,7 @@ Instead of accessing [IBM Quantum Platform Classic](https://quantum.ibm.com/), y
 Jobs that were run on IBM Quantum Platform Classic will not be available after that version of the platform is sunset on 1 July, 2025.
 </Admonition>
 
-* Open users should save any workloads data from the classic platform prior to that date by following the steps in the [Save and retrieve jobs](/guides/save-jobs) guide.
+* Open users should save any workloads data from the classic platform prior to that date by following the steps in the [Save and retrieve jobs](/docs/guides/save-jobs) guide.
 * Premium Plan, Dedicated Service, and Startup Program users should wait to receive  guidance from their administrators regarding whether to download historical data.
 
 <span id="onboard"></span>
