--- a/docs/tutorials/grovers-algorithm.ipynb
+++ b/docs/tutorials/grovers-algorithm.ipynb
@@ -18,7 +18,7 @@
     "\n",
     "Amplitude amplification is a general purpose quantum algorithm, or subroutine, that can be used to obtain a quadratic speedup over a handful of classical algorithms. [Grover’s algorithm](https://arxiv.org/abs/quant-ph/9605043) was the first to demonstrate this speedup on unstructured search problems. Formulating a Grover's search problem requires an oracle function that marks one or more computational basis states as the states we are interested in finding, and an amplification circuit that increases the amplitude of marked states, consequently suppressing the remaining states.\n",
     "\n",
-    "Here, we demonstrate how to construct Grover oracles and use the [`grover_operator()`](/api/qiskit/qiskit.circuit.library.grover_operator) from the Qiskit circuit library to easily set up a Grover's search instance. The runtime `Sampler` primitive allows seamless execution of Grover circuits."
+    "Here, we demonstrate how to construct Grover oracles and use the [`grover_operator()`](/docs/api/qiskit/qiskit.circuit.library.grover_operator) from the Qiskit circuit library to easily set up a Grover's search instance. The runtime `Sampler` primitive allows seamless execution of Grover circuits."
    ]
   },
   {
@@ -347,9 +347,9 @@
    "source": [
     "## Step 3: Execute using Qiskit primitives\n",
     "\n",
-    "Amplitude amplification is a sampling problem that is suitable for execution with the [`Sampler`](/api/qiskit-ibm-runtime/sampler-v2) runtime primitive.\n",
+    "Amplitude amplification is a sampling problem that is suitable for execution with the [`Sampler`](/docs/api/qiskit-ibm-runtime/sampler-v2) runtime primitive.\n",
     "\n",
-    "Note that the `run()` method of [Qiskit Runtime `SamplerV2`](/api/qiskit-ibm-runtime/sampler-v2)  takes an iterable of `primitive unified blocks (PUBs)`. For sampler, each PUB is an iterable in the format `(circuit, parameter_values)`. However, at a minimum, it takes a list of quantum circuit(s)."
+    "Note that the `run()` method of [Qiskit Runtime `SamplerV2`](/docs/api/qiskit-ibm-runtime/sampler-v2)  takes an iterable of `primitive unified blocks (PUBs)`. For sampler, each PUB is an iterable in the format `(circuit, parameter_values)`. However, at a minimum, it takes a list of quantum circuit(s)."
    ]
   },
   {
