--- a/docs/api/qiskit/release-notes/0.29.mdx
+++ b/docs/api/qiskit/release-notes/0.29.mdx
@@ -20,7 +20,7 @@ in_page_toc_max_heading_level: 4
 
 #### Bug Fixes
 
-*   Fixed an issue with the [`assemble()`](/api/qiskit/0.45/compiler#qiskit.compiler.assemble "qiskit.compiler.assemble") function when called with the `backend` kwarg set and the `parametric_pulses` kwarg was set to an empty list the output qobj would contain the `parametric_pulses` setting from the given backend’s [`BackendConfiguration`](/api/qiskit/0.45/qiskit.providers.models.BackendConfiguration "qiskit.providers.models.BackendConfiguration") instead of the expected empty list. Fixed [#6898](https://github.com/Qiskit/qiskit/issues/6898)
+*   Fixed an issue with the [`assemble()`](/docs/api/qiskit/0.45/compiler#qiskit.compiler.assemble "qiskit.compiler.assemble") function when called with the `backend` kwarg set and the `parametric_pulses` kwarg was set to an empty list the output qobj would contain the `parametric_pulses` setting from the given backend’s [`BackendConfiguration`](/docs/api/qiskit/0.45/qiskit.providers.models.BackendConfiguration "qiskit.providers.models.BackendConfiguration") instead of the expected empty list. Fixed [#6898](https://github.com/Qiskit/qiskit/issues/6898)
 *   The Matplotlib circuit drawer will no longer duplicate drawings when using `ipykernel>=6.0.0`. Fixes [#6889](https://github.com/Qiskit/qiskit/issues/6889).
 
 <span id="aer-0-8-2" />
@@ -87,14 +87,14 @@ This bugfix release fixes a few minor issues and regressions in the 0.18.0 relea
 
 #### Bug Fixes
 
-*   Fixed an issue where the [`QuantumInstance`](/api/qiskit/0.45/qiskit.utils.QuantumInstance "qiskit.utils.QuantumInstance") class would potentially try to use the `CompleteMeasFitter` class before it was imported resulting in an error. Fixed [#6774](https://github.com/Qiskit/qiskit/issues/6774)
+*   Fixed an issue where the [`QuantumInstance`](/docs/api/qiskit/0.45/qiskit.utils.QuantumInstance "qiskit.utils.QuantumInstance") class would potentially try to use the `CompleteMeasFitter` class before it was imported resulting in an error. Fixed [#6774](https://github.com/Qiskit/qiskit/issues/6774)
 *   Fixed the missing Linux aarch64 wheels which were not published for the 0.18.0 release. They should now continue to be built as expected for all future releases.
-*   Fixed an issue with the mock backends located in `qiskit.test.mock` where in some situations (mainly fake backends with stored [`BackendProperties`](/api/qiskit/0.45/qiskit.providers.models.BackendProperties "qiskit.providers.models.BackendProperties") running a [`QuantumCircuit`](/api/qiskit/0.45/qiskit.circuit.QuantumCircuit "qiskit.circuit.QuantumCircuit") with `qiskit-aer` installed) passing run time options to the `run()` method of a fake backend object would not actually be passed to the simulator underlying the `run()` method and not have any effect. Fixed [#6741](https://github.com/Qiskit/qiskit/issues/6741)
-*   Fix a bug in [`EvolvedOperatorAnsatz`](/api/qiskit/0.45/qiskit.circuit.library.EvolvedOperatorAnsatz "qiskit.circuit.library.EvolvedOperatorAnsatz") when the global phase is 0 (such as for [`QAOAAnsatz`](/api/qiskit/0.45/qiskit.circuit.library.QAOAAnsatz "qiskit.circuit.library.QAOAAnsatz")) but was still a [`ParameterExpression`](/api/qiskit/0.45/qiskit.circuit.ParameterExpression "qiskit.circuit.ParameterExpression").
-*   Fixed an issue with the [`settings`](/api/qiskit/0.45/qiskit.algorithms.optimizers.QNSPSA#settings "qiskit.algorithms.optimizers.QNSPSA.settings") attribute of [`QNSPSA`](/api/qiskit/0.45/qiskit.algorithms.optimizers.QNSPSA "qiskit.algorithms.optimizers.QNSPSA"), which was missing the `fidelity` argument from the output. This is now correctly included in the attribute’s output.
-*   Fixed an issue with the `subgraph()` method of the [`CouplingMap`](/api/qiskit/0.45/qiskit.transpiler.CouplingMap "qiskit.transpiler.CouplingMap") class where it would incorrectly add nodes to the output [`CouplingMap`](/api/qiskit/0.45/qiskit.transpiler.CouplingMap "qiskit.transpiler.CouplingMap") object when the `nodelist` argument contained a non-contiguous list of qubit indices. This has been fixed so regardless of the input indices in `nodelist` the output [`CouplingMap`](/api/qiskit/0.45/qiskit.transpiler.CouplingMap "qiskit.transpiler.CouplingMap") will only contained the specified nodes reindexed starting at 0. Fixes [#6736](https://github.com/Qiskit/qiskit/issues/6736)
-*   Previously, [`Optimize1qGatesDecomposition`](/api/qiskit/0.45/qiskit.transpiler.passes.Optimize1qGatesDecomposition "qiskit.transpiler.passes.Optimize1qGatesDecomposition") failed to properly optimize one qubit gates that are sufficiently close to the identity matrix. This was fixed so that any gates that differ from the identity by less than 1e-15 are removed.
-*   Fixed the generation and loading of QPY files with `qiskit.circuit.qpy_serialization.dump()` and `qiskit.circuit.qpy_serialization.load()` for [`QuantumCircuit`](/api/qiskit/0.45/qiskit.circuit.QuantumCircuit "qiskit.circuit.QuantumCircuit") objects that contain instructions with classical conditions on a single [`Clbit`](/api/qiskit/0.45/qiskit.circuit.Clbit "qiskit.circuit.Clbit") instead of a [`ClassicalRegister`](/api/qiskit/0.45/qiskit.circuit.ClassicalRegister "qiskit.circuit.ClassicalRegister"). While the use of single [`Clbit`](/api/qiskit/0.45/qiskit.circuit.Clbit "qiskit.circuit.Clbit") conditions is not yet fully supported, if you were using them in a circuit they are now correctly serialized by QPY.
+*   Fixed an issue with the mock backends located in `qiskit.test.mock` where in some situations (mainly fake backends with stored [`BackendProperties`](/docs/api/qiskit/0.45/qiskit.providers.models.BackendProperties "qiskit.providers.models.BackendProperties") running a [`QuantumCircuit`](/docs/api/qiskit/0.45/qiskit.circuit.QuantumCircuit "qiskit.circuit.QuantumCircuit") with `qiskit-aer` installed) passing run time options to the `run()` method of a fake backend object would not actually be passed to the simulator underlying the `run()` method and not have any effect. Fixed [#6741](https://github.com/Qiskit/qiskit/issues/6741)
+*   Fix a bug in [`EvolvedOperatorAnsatz`](/docs/api/qiskit/0.45/qiskit.circuit.library.EvolvedOperatorAnsatz "qiskit.circuit.library.EvolvedOperatorAnsatz") when the global phase is 0 (such as for [`QAOAAnsatz`](/docs/api/qiskit/0.45/qiskit.circuit.library.QAOAAnsatz "qiskit.circuit.library.QAOAAnsatz")) but was still a [`ParameterExpression`](/docs/api/qiskit/0.45/qiskit.circuit.ParameterExpression "qiskit.circuit.ParameterExpression").
+*   Fixed an issue with the [`settings`](/docs/api/qiskit/0.45/qiskit.algorithms.optimizers.QNSPSA#settings "qiskit.algorithms.optimizers.QNSPSA.settings") attribute of [`QNSPSA`](/docs/api/qiskit/0.45/qiskit.algorithms.optimizers.QNSPSA "qiskit.algorithms.optimizers.QNSPSA"), which was missing the `fidelity` argument from the output. This is now correctly included in the attribute’s output.
+*   Fixed an issue with the `subgraph()` method of the [`CouplingMap`](/docs/api/qiskit/0.45/qiskit.transpiler.CouplingMap "qiskit.transpiler.CouplingMap") class where it would incorrectly add nodes to the output [`CouplingMap`](/docs/api/qiskit/0.45/qiskit.transpiler.CouplingMap "qiskit.transpiler.CouplingMap") object when the `nodelist` argument contained a non-contiguous list of qubit indices. This has been fixed so regardless of the input indices in `nodelist` the output [`CouplingMap`](/docs/api/qiskit/0.45/qiskit.transpiler.CouplingMap "qiskit.transpiler.CouplingMap") will only contained the specified nodes reindexed starting at 0. Fixes [#6736](https://github.com/Qiskit/qiskit/issues/6736)
+*   Previously, [`Optimize1qGatesDecomposition`](/docs/api/qiskit/0.45/qiskit.transpiler.passes.Optimize1qGatesDecomposition "qiskit.transpiler.passes.Optimize1qGatesDecomposition") failed to properly optimize one qubit gates that are sufficiently close to the identity matrix. This was fixed so that any gates that differ from the identity by less than 1e-15 are removed.
+*   Fixed the generation and loading of QPY files with `qiskit.circuit.qpy_serialization.dump()` and `qiskit.circuit.qpy_serialization.load()` for [`QuantumCircuit`](/docs/api/qiskit/0.45/qiskit.circuit.QuantumCircuit "qiskit.circuit.QuantumCircuit") objects that contain instructions with classical conditions on a single [`Clbit`](/docs/api/qiskit/0.45/qiskit.circuit.Clbit "qiskit.circuit.Clbit") instead of a [`ClassicalRegister`](/docs/api/qiskit/0.45/qiskit.circuit.ClassicalRegister "qiskit.circuit.ClassicalRegister"). While the use of single [`Clbit`](/docs/api/qiskit/0.45/qiskit.circuit.Clbit "qiskit.circuit.Clbit") conditions is not yet fully supported, if you were using them in a circuit they are now correctly serialized by QPY.
 
 <span id="id236" />
 
