Fix installation instructions for qiskit-addon-utils package

--- a/docs/guides/qiskit-addons-utils.ipynb
+++ b/docs/guides/qiskit-addons-utils.ipynb
@@ -34,7 +34,7 @@
     "The most straightforward way to install the Qiskit addon utilities package is via PyPI.\n",
     "\n",
     "```bash\n",
-    "pip install 'qiskit-addon-aqc-utils'\n",
+    "pip install 'qiskit-addon-utils'\n",
     "```\n",
     "\n",
     "### Install from source\n",
