--- a/docs/tutorials/overview.mdx
+++ b/docs/tutorials/overview.mdx
@@ -1,6 +1,6 @@
 ---
 title: Tutorials
-description: Browse tutorials by tool or topic
+description: Browse tutorials by tool or topic and learn how to apply Qiskit to common use cases.
 ---
 
 # Tutorials
