Add missing survey

--- a/docs/tutorials/generating-long-range-entanglement-with-measurements.ipynb
+++ b/docs/tutorials/generating-long-range-entanglement-with-measurements.ipynb
@@ -686,6 +686,18 @@
   },
   {
    "cell_type": "markdown",
+   "id": "b9562a76",
+   "metadata": {},
+   "source": [
+    "## Tutorial survey\n",
+    "\n",
+    "Please take one minute to provide feedback on this tutorial. Your insights will help us improve our content offerings and user experience.\n",
+    "\n",
+    "[Link to survey](https://your.feedback.ibm.com/jfe/form/SV_bsCKQkgzuQUQ7ky)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "05abb317-6eba-4f78-9f82-ad05439448ee",
    "metadata": {},
    "source": [
