--- a/docs/tutorials/index.mdx
+++ b/docs/tutorials/index.mdx
@@ -13,7 +13,7 @@ Use these tutorials to learn how to apply Qiskit to common quantum computing use
 Simple text to explain this tools-based schema
 
 <details>
-  <summary>**Serverless**</summary>
+  <summary>**Basic tools**</summary>
 
 * [Grover's algorithm](/tutorials/grovers-algorithm)
 
