--- a/docs/tutorials/ibm_circuit_function.ipynb
+++ b/docs/tutorials/ibm_circuit_function.ipynb
@@ -5,7 +5,7 @@
    "id": "bb523f27-586e-4c9c-b641-1f1db71396ef",
    "metadata": {},
    "source": [
-    "## Building workflows with the IBM Circuit function\n",
+    "# Building workflows with the IBM Circuit function\n",
     "*Usage estimate: 26 minutes on IBM Brisbane (NOTE: This is an estimate only. Your runtime may vary.)*"
    ]
   },
@@ -485,6 +485,7 @@
   }
  ],
  "metadata": {
+  "description": "Walk through an example of building and running a workflow using the IBM Circuit function.",
   "kernelspec": {
    "display_name": "Python 3",
    "language": "python",
@@ -502,7 +503,8 @@
    "pygments_lexer": "ipython3",
    "version": "3"
   },
-  "platform": "cloud"
+  "platform": "cloud",
+  "title": "Building workflows with the IBM Circuit function\n"
  },
  "nbformat": 4,
  "nbformat_minor": 5
