--- a/docs/tutorials/krylov_quantum_diagonalization.ipynb
+++ b/docs/tutorials/krylov_quantum_diagonalization.ipynb
@@ -1626,6 +1626,9 @@
   }
  ],
  "metadata": {
+  "title": "Diagonalization of large many-body Hamiltonians on a quantum processor\n",
+  "description": "Implement the Krylov Quantum Diagonalization Algorithm (KQD) within the context of Qiskit patterns.",
+  "platform": "cloud",
   "kernelspec": {
    "display_name": "Python 3",
    "language": "python",
