--- a/docs/tutorials/qunova-hivqe.ipynb
+++ b/docs/tutorials/qunova-hivqe.ipynb
@@ -1105,6 +1105,7 @@
   }
  ],
  "metadata": {
+  "description": "Use Qunova HiVQE to compute dissociation potential energy surface (PES) curves.",
   "kernelspec": {
    "display_name": "Python 3",
    "language": "python",
@@ -1121,7 +1122,9 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3"
-  }
+  },
+  "platform": "cloud",
+  "title": "Compute Dissociation PES curve for Li2S (20Q) and FeP-NO (44Q) with Qunova HiVQE"
  },
  "nbformat": 4,
  "nbformat_minor": 5
