--- a/docs/tutorials/sqd-chemistry.ipynb
+++ b/docs/tutorials/sqd-chemistry.ipynb
@@ -687,6 +687,7 @@
   }
  ],
  "metadata": {
+  "description": "Use the sample-based quantum diagonalization algorithm to simulate a nitrogen molecule using noisy quantum hardware.",
   "kernelspec": {
    "display_name": "Python 3",
    "language": "python",
@@ -704,7 +705,8 @@
    "pygments_lexer": "ipython3",
    "version": "3"
   },
-  "platform": "cloud"
+  "platform": "cloud",
+  "title": "Improving energy estimation of a Fermionic Hamiltonian with SQD\n"
  },
  "nbformat": 4,
  "nbformat_minor": 5
